[package]
name = "redacter"
version = "0.8.0"
edition = "2021"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
license = "Apache-2.0"
homepage = "https://github.com/abdolence/redacter-rs"
repository = "https://github.com/abdolence/redacter-rs"
documentation = "https://docs.rs/redacter"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
rust-version = "1.80.0"
keywords = ["redact", "pii", "dlp"]
categories = ["command-line-utilities"]
description = "Copy & Redact cli tool to securely copy and redact files removing Personal Identifiable Information (PII) across various filesystems."

[features]
default = ["pdf-render"]
ci-gcp = [] # For testing on CI/GCP
ci-aws = [] # For testing on CI/AWS
ci-ms-presidio = [] # For testing on CI/MS Presidiom
ci-gcp-llm = [] # For testing on CI/GCP with LLM models
ci-open-ai = [] # For testing on CI/OpenAIP
ci = ["ci-gcp", "ci-aws", "ci-ms-presidio", "ci-gcp-llm", "ci-open-ai"]
pdf-render = ["pdfium-render"]


[dependencies]
rsb_derive = "0.5"
rvstruct = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
console = { version = "0.15" }
indicatif = { version = "0.17" }
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.14", features = ["fs", "rt-multi-thread", "sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
gcloud-sdk = { version = "0.25.5", features = ["google-privacy-dlp-v2", "google-rest-storage-v1", "google-ai-generativelanguage-v1beta"] }
futures = "0.3"
sha2 = "0.10"
async-trait = "0.1"
hex = "0.4"
thiserror = "1"
sync_wrapper = { version = "1", features = ["futures"] }
async-recursion = "1"
mime = "0.3"
mime_guess = "2"
zip = "2"
globset = "0.4"
tempfile = "3"
csv-async = { version = "1", default-features = false, features = ["tokio", "tokio-stream"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1" }
aws-sdk-comprehend = { version = "1" }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
pdfium-render = { version = "0.8", features = ["thread_safe", "image"], optional = true }
image = "0.25"
bytes = { version = "1" }
arboard = { version = "3", features = ["image"] }


[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
